--- a/ProjetoEmprestimoLivrosCurso/appsettings.json
+++ b/ProjetoEmprestimoLivrosCurso/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "DafaultConnection": "server=ANTâNIOBARBOSA; database=ProjetoEmprestimoLivrosCurso; trusted_connection=true; trustservercertificate=true"
+  },
   "AllowedHosts": "*"
 }
