Conectando e criando o banco de dados.

--- a/ProjetoEmprestimoLivrosCurso/appsettings.json
+++ b/ProjetoEmprestimoLivrosCurso/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "DafaultConnection": "server=ANTâNIOBARBOSA; database=ProjetoEmprestimoLivrosCurso; trusted_connection=true; trustservercertificate=true"
+    "DefaultConnection": "server=ANTâNIOBARBOSA; database=ProjetoEmprestimoLivrosCurso; trusted_connection=true; trustservercertificate=true"
   },
   "AllowedHosts": "*"
 }
